// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H4 should allow size to be overridden 1`] = `
.glamor-0 {
  display: block;
}

<h4
  className="glamor-0 root weight-normal size-large color-charcoal hover-color-none margin-none root"
  href={undefined}
  name={undefined}
  onClick={undefined}
  style={Object {}}
  target={undefined}
>
  An H4 Tag
</h4>
`;

exports[`H4 should render shallow component ok 1`] = `
.glamor-0 {
  display: block;
}

<h4
  className="glamor-0 root weight-normal size-small color-charcoal hover-color-none margin-none root"
  href={undefined}
  name={undefined}
  onClick={undefined}
  style={Object {}}
  target={undefined}
>
  An H4 Tag
</h4>
`;
